# FEDDLib

./: .gitmodules  CMakeLists.txt  Doxyfile  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Version.cmake
feddlib/core/: CMakeLists.txt  FEDDCore.hpp
feddlib/core/AceFemAssembly/: .AssembleFE_decl.hpp.un~  AssembleFE.cpp  AssembleFE.hpp  AssembleFEBlock.cpp  AssembleFEBlock.hpp  AssembleFEBlock_decl.hpp  AssembleFEBlock_def.hpp  AssembleFEFactory.cpp  AssembleFEFactory.hpp  AssembleFEFactory_decl.hpp  AssembleFEFactory_def.hpp  AssembleFE_decl.hpp  AssembleFE_decl.hpp~  AssembleFE_def.hpp  CMakeLists.txt
feddlib/core/AceFemAssembly/AceInterface/: CMakeLists.txt
feddlib/core/AceFemAssembly/specific/: AssembleFEGeneralizedNewtonian.cpp  AssembleFEGeneralizedNewtonian.hpp  AssembleFEGeneralizedNewtonian_decl.hpp  AssembleFEGeneralizedNewtonian_def.hpp  AssembleFENavierStokes.cpp  AssembleFENavierStokes.hpp  AssembleFENavierStokes_decl.hpp  AssembleFENavierStokes_def.hpp  AssembleFENonLinLaplace.cpp  AssembleFENonLinLaplace.hpp  AssembleFENonLinLaplace_decl.hpp  AssembleFENonLinLaplace_def.hpp  AssembleFE_Laplace.cpp  AssembleFE_Laplace.hpp  AssembleFE_Laplace_decl.hpp  AssembleFE_Laplace_def.hpp  AssembleFE_LinElas.cpp  AssembleFE_LinElas.hpp  AssembleFE_LinElas_decl.hpp  AssembleFE_LinElas_def.hpp  AssembleFE_NonLinElas.cpp  AssembleFE_NonLinElas.hpp  AssembleFE_NonLinElas2.cpp  AssembleFE_NonLinElas2.hpp  AssembleFE_NonLinElas2_decl.hpp  (+16 more)
feddlib/core/FE/: .Helper.hpp.un~  CMakeLists.txt  Domain.cpp  Domain.hpp  Domain_decl.hpp  Domain_def.hpp  EdgeElements.hpp  Elements.cpp  Elements.hpp  FE.cpp  FE.hpp  FE_ElementAssembly.cpp  FE_ElementAssembly.hpp  FE_ElementAssembly_decl.hpp  FE_ElementAssembly_def.hpp  FE_decl.hpp  FE_def.hpp  FiniteElement.hpp  Helper.cpp  Helper.hpp  Helper.hpp~  SMSUtility.cpp  TriangleElements.hpp  sms.hpp
feddlib/core/General/: BCBuilder.cpp  BCBuilder.hpp  BCBuilder_decl.hpp  BCBuilder_def.hpp  CMakeLists.txt  DefaultTypeDefs.hpp  DifferentiableFuncClass.cpp  DifferentiableFuncClass.hpp  DifferentiableFuncClass_decl.hpp  DifferentiableFuncClass_def.hpp  ExporterParaView.cpp  ExporterParaView.hpp  ExporterParaView_decl.hpp  ExporterParaView_def.hpp  ExporterTxt.cpp  ExporterTxt.hpp  HDF5Export.cpp  HDF5Export.hpp  HDF5Export_decl.hpp  HDF5Export_def.hpp  HDF5Import.cpp  HDF5Import.hpp  HDF5Import_decl.hpp  HDF5Import_def.hpp  HDF5Toolbox.cpp  HDF5Toolbox.hpp  HDF5Toolbox_decl.hpp  HDF5Toolbox_def.hpp  InputToOutputMappingClass.cpp  InputToOutputMappingClass.hpp  InputToOutputMappingClass_decl.hpp  InputToOutputMappingClass_def.hpp  SmallMatrix.hpp
feddlib/core/IO/: CMakeLists.txt  IO_ParameterList_decl.hpp  IO_Utils.hpp
feddlib/core/LinearAlgebra/: BlockMap.cpp  BlockMap.hpp  BlockMap_decl.hpp  BlockMap_def.hpp  BlockMatrix.cpp  BlockMatrix.hpp  BlockMatrix_decl.hpp  BlockMatrix_def.hpp  BlockMultiVector.cpp  BlockMultiVector.hpp  BlockMultiVector_decl.hpp  BlockMultiVector_def.hpp  CMakeLists.txt  Map.cpp  Map.hpp  Map_Xpetra.cpp  Map_Xpetra.hpp  Map_Xpetra_decl.hpp  Map_Xpetra_def.hpp  Map_decl.hpp  Map_def.hpp  Matrix.cpp  Matrix.hpp  Matrix_decl.hpp  Matrix_def.hpp  MultiVector.cpp  MultiVector_decl.hpp  MultiVector_def.hpp
feddlib/core/Mesh/: AABBTree.cpp  AABBTree.hpp  AABBTree_decl.hpp  AABBTree_def.hpp  CMakeLists.txt  Mesh.cpp  Mesh.hpp  MeshFileReader.hpp  MeshInterface.cpp  MeshInterface.hpp  MeshInterface_def.hpp  MeshPartitioner.cpp  MeshPartitioner.hpp  MeshPartitioner_decl.hpp  MeshPartitioner_def.hpp  MeshStructured.cpp  MeshStructured.hpp  MeshStructured_decl.hpp  MeshStructured_def.hpp  MeshUnstructured.cpp  MeshUnstructured.hpp  MeshUnstructured_decl.hpp  MeshUnstructured_def.hpp  Mesh_decl.hpp  Mesh_def.hpp
feddlib/core/Utils/: CMakeLists.txt  FEDDUtils.hpp
feddlib/core/cmake/: Dependencies.cmake
feddlib/problems/: CMakeLists.txt
feddlib/problems/Solver/: .NonLinearSolver_decl.hpp.un~  .Preconditioner_decl.hpp.un~  CMakeLists.txt  DAESolverInTime.cpp  DAESolverInTime.hpp  DAESolverInTime_decl.hpp  DAESolverInTime_def.hpp  LinearSolver.cpp  LinearSolver.hpp  LinearSolver_decl.hpp  LinearSolver_def.hpp  NonLinearSolver.cpp  NonLinearSolver.hpp  NonLinearSolver_decl.hpp  NonLinearSolver_decl.hpp~  NonLinearSolver_def.hpp  PrecBlock2x2.cpp  PrecBlock2x2.hpp  PrecBlock2x2_decl.hpp  PrecBlock2x2_def.hpp  PrecOpFaCSI.cpp  PrecOpFaCSI.hpp  PrecOpFaCSI_decl.hpp  PrecOpFaCSI_def.hpp  Preconditioner.cpp  Preconditioner.hpp  PreconditionerOperator.cpp  PreconditionerOperator.hpp  PreconditionerOperator_def.hpp  Preconditioner_decl.hpp  Preconditioner_decl.hpp~  Preconditioner_def.hpp  TimeSteppingTools.cpp  TimeSteppingTools.hpp
feddlib/problems/abstract/: CMakeLists.txt  LinearProblem.cpp  LinearProblem.hpp  LinearProblem_def.hpp  MinPrecProblem.cpp  MinPrecProblem.hpp  MinPrecProblem_decl.hpp  MinPrecProblem_def.hpp  NonLinearProblem.cpp  NonLinearProblem.hpp  NonLinearProblem_decl.hpp  NonLinearProblem_def.hpp  Problem.cpp  Problem.hpp  Problem_decl.hpp  Problem_def.hpp  TimeProblem.cpp  TimeProblem.hpp  TimeProblem_decl.hpp  TimeProblem_def.hpp
feddlib/problems/cmake/: Dependencies.cmake
feddlib/problems/examples/: CMakeLists.txt
feddlib/problems/specific/: .NonLinElasAssFE_decl.hpp.un~  .NonLinElasticity_decl.hpp.un~  CMakeLists.txt  DiffusionReaction.cpp  DiffusionReaction.hpp  DiffusionReaction_decl.hpp  DiffusionReaction_def.hpp  FSI.cpp  FSI.hpp  FSI_decl.hpp  FSI_def.hpp  Geometry.cpp  Geometry.hpp  Geometry_decl.hpp  Geometry_def.hpp  Laplace.cpp  Laplace.hpp  LaplaceBlocks.cpp  LaplaceBlocks.hpp  LaplaceBlocks_decl.hpp  LaplaceBlocks_def.hpp  Laplace_decl.hpp  Laplace_def.hpp  LinElas.cpp  LinElas.hpp  LinElasAssFE_def.hpp  LinElas_decl.hpp  LinElas_def.hpp  NavierStokes.cpp  NavierStokes.hpp  NavierStokesAssFE.cpp  NavierStokesAssFE.hpp  NavierStokesAssFE_decl.hpp  NavierStokesAssFE_def.hpp  NavierStokes_decl.hpp  NavierStokes_def.hpp  NonLinElasAssFE_decl.hpp  NonLinElasAssFE_decl.hpp~  NonLinElasAssFE_def.hpp  NonLinElasticity.cpp  (+12 more)
feddlib/problems/tests/: CMakeLists.txt
(+276 files in other folders)
